Add CityBar + Finishing the searchbar

--- a/static/src/Component/SearchBar/SearchBar.css
+++ b/static/src/Component/SearchBar/SearchBar.css
@@ -1,25 +1,68 @@
 #SearchBar {
     position: absolute;
     display: flex;
+    flex-direction: column;
     align-items: center;
     top: 25px;
     left:calc(50% - 30vw);
     z-index: 50;
     width: 60vw;
+}
+
+#SearchBar .SearchBarItem,
+#SearchBar .SearchBarInput {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
     background: white;
     border-radius: 10px;
     overflow: hidden;
+    margin-bottom: 25px;
+}
+
+#SearchBar .SearchBarInput {
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, .15);
 }
 
-#SearchBar:focus-within {
+#SearchBar .SearchBarInput svg {
+    cursor: pointer;
+    padding: 0 15px;
+}
+
+#SearchBar .SearchBarInput:focus-within {
     box-shadow: 0 0 5px 0px rgba(0, 0, 0, .3);
 }
 
-#SearchBar input {
+#SearchBar .SearchBarInput input {
     flex: 1;
     border: 0;
     font-size: 14px;
     outline: none;
     padding: 10px 15px;
+}
+
+#SearchBar .SearchBarItem {
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: 10px 15px;
+    box-shadow: 0 0 5px 0px rgba(0, 0, 0, .3);
+    text-decoration: none;
+    color: black;
+    justify-content: flex-start;
+}
+
+#SearchBar .SearchBarItem:hover {
+    background: rgba(240, 240, 240);
+}
+
+#SearchBar .SearchBarItem .SubTitle {
+    color: grey;
+    font-weight: 800;
+    padding: 0 10px;
+}
+
+#SearchBar .SearchBarItem .Value {
+    color: blue;
+    font-weight: 800;
 }
