--- a/static/src/Component/CityBar/CityBar.css
+++ b/static/src/Component/CityBar/CityBar.css
@@ -13,6 +13,10 @@
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, .15);
 }
 
+#CityBar.hidden {
+    display: none;
+}
+
 #CityBar .CityBarTitle {
     display: flex;
     justify-content: space-between;
