--- a/static/src/Component/CityBar/CityBar.css
+++ b/static/src/Component/CityBar/CityBar.css
@@ -44,6 +44,8 @@
     margin: 0;
     box-sizing: border-box;
     border-top: 1px solid rgba(0,0,0,.15);
+
+    margin-bottom: 15px;
 }
 
 #CityBar .Weather {
