--- a/static/src/Component/SearchBar/SearchBar.css
+++ b/static/src/Component/SearchBar/SearchBar.css
@@ -4,9 +4,9 @@
     flex-direction: column;
     align-items: center;
     top: 25px;
-    left:calc(50% - 30vw);
+    left:25vw;
     z-index: 50;
-    width: 60vw;
+    width: 50vw;
 }
 
 #SearchBar .SearchBarItem,
