--- a/static/src/Component/CityBar/CityBar.css
+++ b/static/src/Component/CityBar/CityBar.css
@@ -4,8 +4,9 @@
     flex: 1;
     flex-direction: column;
     align-items: center;
-    top: 15vh;
+    top: 50%;
     left: 2.5vw;
+    transform: translateY(-50%);
     z-index: 50;
     width: 350px;
     background: white;
