--- a/projet/static/src/Component/SearchBar/SearchBar.css
+++ b/projet/static/src/Component/SearchBar/SearchBar.css
@@ -63,6 +63,10 @@
 }
 
 #SearchBar .SearchBarItem .Value {
+    flex: 1;
     color: #bba212;
     font-weight: 800;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
