--- a/static/src/Component/BreweryBar/BreweryBar.css
+++ b/static/src/Component/BreweryBar/BreweryBar.css
@@ -50,6 +50,8 @@
 #BreweryBar .Info {
     display: flex;
     width: 100%;
+    max-width: 100%;
+    overflow: hidden;
     padding: 5px 0;
     padding-left: 25px;
     font-size: 15px;
@@ -67,7 +69,7 @@
     overflow-y: auto;
     width: 100%;
     height: fit-content;
-    max-height: 20vh;
+    max-height: 25vh;
     margin-top: 10px;
     margin-bottom: 10px;
 }
