--- a/static/src/Component/CityBar/CityBar.css
+++ b/static/src/Component/CityBar/CityBar.css
@@ -1,169 +1,161 @@
 #CityBar {
-    position: absolute;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    align-items: center;
-    top: 50%;
-    left: 2.5vw;
-    transform: translateY(-50%);
-    z-index: 50;
-    width: 350px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .15);
+	position: absolute;
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	align-items: center;
+	top: 50%;
+	left: 2.5vw;
+	transform: translateY(-50%);
+	z-index: 50;
+	width: 350px;
+	background: white;
+	border-radius: 10px;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, .15);
 }
 
 #CityBar.hidden {
-    display: none;
+	display: none;
 }
 
 #CityBar .CityBarTitle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 25px;
-    box-sizing: border-box;
-    text-align: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 25px;
+	box-sizing: border-box;
+	text-align: center;
 }
 
 #CityBar .CityBarTitle .Title {
-    color: black;
-    font-size: 25px;
-    font-weight: 800;
+	color: black;
+	font-size: 25px;
+	font-weight: 800;
 }
 
 #CityBar .CityBarTitle svg {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 #CityBar h2 {
-    width: 100%;
-    padding: 0 25px;
-    padding-top: 15px;
-    font-size: 18px;
-    margin: 0;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(0,0,0,.15);
+	width: 100%;
+	padding: 0 25px;
+	padding-top: 15px;
+	font-size: 18px;
+	margin: 0;
+	box-sizing: border-box;
+	border-top: 1px solid rgba(0, 0, 0, .15);
 }
 
 #CityBar .Weather {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-#CityBar .Weather img{
-    margin-right: 25px;
-    width: 100px;
+#CityBar .Weather img {
+	margin-right: 25px;
+	width: 100px;
 }
 
-#CityBar .Weather .WeatherInfo{
-    display: flex;
-    flex-direction: column;
+#CityBar .Weather .WeatherInfo {
+	display: flex;
+	flex-direction: column;
 }
 
-#CityBar .Weather .WeatherInfo .Temperature{
-    font-size: 22px;
-    font-weight: 800;
+#CityBar .Weather .WeatherInfo .Temperature {
+	font-size: 22px;
+	font-weight: 800;
 }
 
-#CityBar .Weather .WeatherInfo .Title{
-    margin-top: 10px;
-    font-size: 18px;
-    text-transform : capitalize ;
+#CityBar .Weather .WeatherInfo .Title {
+	margin-top: 10px;
+	font-size: 18px;
+	text-transform: capitalize;
 }
 
 #CityBar .CityBarItem {
-    cursor: pointer;
-    box-sizing: border-box;
-    padding: 10px 15px;
-    box-shadow: 0 0 5px 0px rgba(0, 0, 0, .3);
-    text-decoration: none;
-    color: black;
-    justify-content: flex-start;
+	cursor: pointer;
+	box-sizing: border-box;
+	padding: 10px 15px;
+	box-shadow: 0 0 5px 0px rgba(0, 0, 0, .3);
+	text-decoration: none;
+	color: black;
+	justify-content: flex-start;
 }
 
 #CityBar .CityBarItem:hover {
-    background: rgba(240, 240, 240);
+	background: rgba(240, 240, 240);
 }
 
 #CityBar .CityBarItem .SubTitle {
-    color: grey;
-    font-weight: 800;
-    padding: 0 10px;
+	color: grey;
+	font-weight: 800;
+	padding: 0 10px;
 }
 
 #CityBar .CityBarItem .Value {
-    color: blue;
-    font-weight: 800;
+	color: blue;
+	font-weight: 800;
 }
 
-
 #CityBar .Breweries {
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    width: 100%;
-    height: fit-content;
-    max-height: 20vh;
-    margin-top: 10px;
-    margin-bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	overflow-y: auto;
+	width: 100%;
+	height: fit-content;
+	max-height: 20vh;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 #CityBar .Breweries .Brewerie {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    color: black;
-    padding: 10px 15px;
-    box-sizing: border-box;
-    text-decoration: none;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	color: black;
+	padding: 10px 15px;
+	box-sizing: border-box;
+	text-decoration: none;
 }
 
 #CityBar .Breweries .Brewerie:hover {
-    background: rgba(0, 0, 0, .15)
+	background: rgba(0, 0, 0, .15)
 }
 
 #CityBar .Breweries .Brewerie .left {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 #CityBar .Breweries .Brewerie .left svg {
-    margin-right: 10px;
+	margin-right: 10px;
 }
-
 
 #CityBar .zero {
-    margin-left: 25px;
+	margin-left: 25px;
 }
-
 
 #OpenCityBar {
-    background-color: white;
-    color: #858585;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .15);
-    writing-mode: vertical-rl;
-    -webkit-writing-mode: vertical-rl;
-    -ms-writing-mode: vertical-rl;
-
-    padding: 10px 5px;
-
-    position: absolute;
-    top: 50%;
-    left:0;
-    transform: translateY(-50%);
-
-    z-index: 1;
-
-    cursor: pointer;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+	background-color: white;
+	color: #858585;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, .15);
+	writing-mode: vertical-rl;
+	-webkit-writing-mode: vertical-rl;
+	-ms-writing-mode: vertical-rl;
+	padding: 10px 5px;
+	position: absolute;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	z-index: 1;
+	cursor: pointer;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
 }
 
-
 #OpenCityBar.hidden {
-    display: none;
+	display: none;
 }
